condensed three similar image tags into one style

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -66,23 +66,14 @@ article {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
 h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management img {
+img {
     max-height: 200px;
 }
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
 
 .float-left {
     float: left;
