--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -95,17 +95,7 @@ img {
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
+aside {
     margin-bottom: 32px;
     color: #ffffff;
 }
