--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     font-size: 16px;
 }
 
-.header {
+header {
     padding: 20px;
     background-color: #2a607c;
     color: #ffffff;
@@ -111,13 +111,13 @@ h3 {
     max-width: 150px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
